# lightning-hydra-template

./: .gitignore  environment.yaml  pyproject.toml
configs/: train.yaml
configs/callbacks/: default.yaml  eval_callback.yaml  image_logger.yaml  test_callback.yaml
configs/debug/: default.yaml
configs/experiment/: example.yaml
configs/logger/: wandb.yaml
configs/trainer/: default.yaml
src/: train.py
src/models/: mnist_module.py
src/utils/: __init__.py  callbacks.py  extra_utils.py  instantiators.py  logging_utils.py  task_utils.py
