[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Lightning-Hydra-Template"
version = "1.0"
description = ""
authors = [
    { name = "Tim Küchler", email = "tim.kuechler@iwr.uni-heidelberg.de" }
]
readme = ""
license = { text = "" }
requires-python = ">=3.11"
urls = { Homepage = "" }

[tool.setuptools.packages.find]
where = ["."]